# utility-project

./: .gitignore  README.md  pyproject.toml  read_file_to_txt.ipynb
