[project]
name = "utils-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "aib"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "markitdown[docx,pdf,pptx,xls,xlsx] (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
